# tauri-vite-react

./: .prettierrc.cjs  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
public/: splashscreen.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: github.rs  mod.rs  updsocket.rs
src-tauri/src/parts/: menu.rs  tray.rs
src-tauri/src/services/: mod.rs  state.rs
src/lang/: i18n.ts
src/lang/locales/en/: common.json
src/lang/locales/zh/: ns1.json
src/pages/home/: index.tsx  setting.tsx  studio_iframe.tsx
src/pages/layouts/: container.tsx  login.tsx
src/router/: index.tsx  routes.tsx
