[package]
name = "studio"
version = "0.0.0"
description = "Studio"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "system-tray",
    "updater",
    "app-all",
    "shell-sidecar",
    "process-command-api",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding = "0.2.33"
command = "0.0.0"
tauri-runtime-wry = "0.14.9"
reqwest = { version = "0.12.5", features = ["json"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
